--- a/app/assets/stylesheets/updated/layouts/help-article.scss
+++ b/app/assets/stylesheets/updated/layouts/help-article.scss
@@ -30,33 +30,32 @@
   padding-bottom: $spacing-2;
 
   a {
-    display: inline-block;
+    display: block;
     font-size: $font-size-body-s;
     margin-left: $spacing-4;
   }
 
   li {
-    list-style-position: inside;
-    margin: 0 0 20px 0;
-    padding: 0;
+    margin: 0 0 20px 20px;
+    padding: 0 0 0 $spacing-4;
   }
 
   ol {
+    @include clear-floats;
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
     column-fill: balance;
     column-gap: $spacing-3;
     margin: 0;
-    overflow: hidden;
     padding: 0;
   }
 }
 
 .article-pagination {
+  @include clear-floats;
   margin-bottom: $spacing-2;
   padding-top: $spacing-1;
-  overflow: hidden;
 
   a {
     text-decoration: none;
